Fixed video alignment bug. Added foundational media q's & color overlay.

--- a/style.css
+++ b/style.css
@@ -4,8 +4,67 @@
   box-sizing: border-box;
 }
 
-#landingVideo {
+@keyframes fade-in-down {
+	from {
+		opacity: 0;
+		transform: translate3d(0, -20%, 0);
+	}
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+  }
+}
+
+.showcase {
+  position: relative;
   width: 100%;
-  height: auto;
-  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-size:cover;
+  background-position:center;
+  flex-direction:column;
+}
+
+.showcase h1 {
+  animation-name: fade-in-down;
+  animation-duration: 3s;
+  text-align: center;
+  font-size: 6rem;
+  color: white;
+  padding: 20px;
+  margin: 15px;
+  z-index: 1;
+  opacity: 0.9;
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.color-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.6;
+}
+
+@media screen and (max-aspect-ratio: 1920/1080) {
+  .video-container > video {
+    height: 100%;
+  }
+}
+
+@media screen and (min-aspect-ratio: 1920/1080) {
+  .video-container > video {
+    width: 100%;
+  }
 }
